# AL

./: .agentignore  .cursorrules  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
agents/: README.md
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/: AGENTS.md  pyproject.toml  quality_gates.yaml  task.example.yaml
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/.codex/skills/bug-investigation/: SKILL.md
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/.codex/skills/feature-development/: SKILL.md
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/.codex/skills/hotfix/: SKILL.md
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/.codex/skills/python-quality/: SKILL.md
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/.codex/skills/security-review/: SKILL.md
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/.codex/skills/test-design/: SKILL.md
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/.cursor/agents/: architect.agent.md  ci-reviewer.agent.md  critic.agent.md  implementer.agent.md  orchestrator.agent.md  planner.agent.md  python-quality-reviewer.agent.md  security-reviewer.agent.md  test-engineer.agent.md  ux-reviewer.agent.md  verifier.agent.md
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/.cursor/rules/: 001-always.mdc  002-python.mdc  003-security.mdc  004-ux.mdc
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/.github/: dependabot.yml  pull_request_template.md
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/.github/agents/: architect.agent.md  ci-reviewer.agent.md  critic.agent.md  implementer.agent.md  orchestrator.agent.md  planner.agent.md  python-quality-reviewer.agent.md  security-reviewer.agent.md  test-engineer.agent.md  ux-reviewer.agent.md  verifier.agent.md
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/.github/workflows/: ci.yml
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/prompts/: critic_prompt.md  implementer_prompt.md  planner_prompt.md  verifier_prompt.md
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/skills/github-ci/: SKILL.md
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/skills/handoff-update/: SKILL.md
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/skills/refactor-safety/: SKILL.md
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/skills/release-readiness/: SKILL.md
archive/source_materials/universal_ai_agent_knowledge_base/10_REPO_TEMPLATES/skills/ux-review/: SKILL.md
docs/: research-notes.md
(+149 files in other folders)
